@@ -49,8 +49,12 @@ public class ElementUtil {
 	 * @param type The type that the entry has to match
 	 * @return A predicate that checks if the type matches the parameter
 	 */
-	public static Predicate<DataListEntry> typeMatches(String type) {
-		return e -> type.equals(e.getType());
+	public static Predicate<DataListEntry> typeMatches(String... type) {
+		if (type.length == 1) {
+			return e -> type[0].equals(e.getType());
+		} else {
+			return e -> Arrays.asList(type).contains(e.getType());
+		}
 	}
 
 	/**
@@ -88,23 +92,69 @@ public class ElementUtil {
 	}
 
 	/**
-	 * Loads all mod elements and all Minecraft elements (blocks and items), including elements
-	 * that are wildcard elements to subtypes (wood -&gt; oak wood, birch wood, ...)
+	 * Loads all items (also blocks if they have item representation), but without those
+	 * that are wildcard elements to subtypes (wood: oak wood, cherry wood, ...)
+	 * so only oak wood, cherry wood, ... are loaded, without wildcard wood element
+	 *
+	 * @return All Blocks and Items from both Minecraft and custom elements with or without metadata
+	 */
+	public static List<MCItem> loadBlocksAndItems(Workspace workspace) {
+		List<MCItem> elements = new ArrayList<>();
+		workspace.getModElements().forEach(modElement -> elements.addAll(modElement.getMCItems()));
+		elements.addAll(
+				DataListLoader.loadDataList("blocksitems").stream().map(e -> (MCItem) e).filter(MCItem::hasNoSubtypes)
+						.toList());
+		return elements.stream().filter(typeMatches("block", "item")).filter(e -> e.isSupportedInWorkspace(workspace))
+				.collect(Collectors.toList());
+	}
+
+	/**
+	 * Loads all items (also blocks if they have item representation), including elements
+	 * that are wildcard elements to subtypes (wood: oak wood, cherry wood, ...)
 	 *
 	 * @return All Blocks and Items from both Minecraft and custom elements with or without metadata
 	 */
 	public static List<MCItem> loadBlocksAndItemsAndTags(Workspace workspace) {
 		List<MCItem> elements = new ArrayList<>();
 		workspace.getModElements().forEach(modElement -> elements.addAll(modElement.getMCItems()));
-		elements.addAll(
-				DataListLoader.loadDataList("blocksitems").stream().filter(e -> e.isSupportedInWorkspace(workspace))
-						.map(e -> (MCItem) e).toList());
-		return elements;
+		elements.addAll(DataListLoader.loadDataList("blocksitems").stream().map(e -> (MCItem) e).toList());
+		return elements.stream().filter(typeMatches("block", "item", "tag"))
+				.filter(e -> e.isSupportedInWorkspace(workspace)).collect(Collectors.toList());
 	}
 
 	/**
-	 * Loads all mod elements and all Minecraft elements (blocks and items), including elements
-	 * that are wildcard elements to subtypes (wood -&gt; oak wood, birch wood, ...)
+	 * Loads all blocks without those that are wildcard elements to subtypes (wood: oak wood, cherry wood, ...)
+	 * so only oak wood, cherry wood, ... are loaded, without wildcard wood element
+	 *
+	 * @return All Blocks from both Minecraft and custom elements with or without metadata
+	 */
+	public static List<MCItem> loadBlocks(Workspace workspace) {
+		List<MCItem> elements = new ArrayList<>();
+		workspace.getModElements().forEach(modElement -> elements.addAll(modElement.getMCItems()));
+		elements.addAll(
+				DataListLoader.loadDataList("blocksitems").stream().map(e -> (MCItem) e).filter(MCItem::hasNoSubtypes)
+						.toList());
+		return elements.stream().filter(typeMatches("block", "block_without_item"))
+				.filter(e -> e.isSupportedInWorkspace(workspace)).collect(Collectors.toList());
+	}
+
+	/**
+	 * Loads all mod elements and all Minecraft blocks, including those that
+	 * are wildcard elements to subtypes (wood: oak wood, cherry wood, ...)
+	 *
+	 * @return All Blocks from both Minecraft and custom elements with or without metadata
+	 */
+	public static List<MCItem> loadBlocksAndTags(Workspace workspace) {
+		List<MCItem> elements = new ArrayList<>();
+		workspace.getModElements().forEach(modElement -> elements.addAll(modElement.getMCItems()));
+		elements.addAll(DataListLoader.loadDataList("blocksitems").stream().map(e -> (MCItem) e).toList());
+		return elements.stream().filter(typeMatches("block", "block_without_item", "tag"))
+				.filter(e -> e.isSupportedInWorkspace(workspace)).collect(Collectors.toList());
+	}
+
+	/**
+	 * Loads all items (also blocks if they have item representation), including those
+	 * that are wildcard elements to subtypes (wood: oak wood, cherry wood, ...)
 	 * This list also provides potions from both Minecraft elements and mod elements
 	 *
 	 * @return All Blocks and Items and Potions from both Minecraft and custom elements with or without metadata
@@ -116,9 +166,9 @@ public class ElementUtil {
 	}
 
 	/**
-	 * Loads all mod elements and all Minecraft elements (blocks and items) without elements
-	 * that are wildcard elements to subtypes (wood -&gt; oak wood, birch wood, ...)
-	 * so only oak wood, birch wood, ... are loaded, without wildcard wood element
+	 * Loads all items (also blocks if they have item representation), without those
+	 * that are wildcard elements to subtypes (wood: oak wood, cherry wood, ...)
+	 * so only oak wood, cherry wood, ... are loaded, without wildcard wood element
 	 * This list also provides potions from both Minecraft elements and mod elements
 	 *
 	 * @return All Blocks and Items and Potions from both Minecraft and custom elements with or without metadata
@@ -126,55 +176,6 @@ public class ElementUtil {
 	public static List<MCItem> loadBlocksAndItemsAndPotions(Workspace workspace) {
 		List<MCItem> elements = loadBlocksAndItems(workspace);
 		loadAllPotions(workspace).forEach(potion -> elements.add(new MCItem.Potion(workspace, potion)));
-		return elements;
-	}
-
-	/**
-	 * Loads all mod elements and all Minecraft elements (blocks and items) without elements
-	 * that are wildcard elements to subtypes (wood -&gt; oak wood, birch wood, ...)
-	 * so only oak wood, birch wood, ... are loaded, without wildcard wood element
-	 *
-	 * @return All Blocks and Items from both Minecraft and custom elements with or without metadata
-	 */
-	public static List<MCItem> loadBlocksAndItems(Workspace workspace) {
-		List<MCItem> elements = new ArrayList<>();
-		workspace.getModElements().forEach(modElement -> elements.addAll(modElement.getMCItems()));
-		elements.addAll(
-				DataListLoader.loadDataList("blocksitems").stream().filter(e -> e.isSupportedInWorkspace(workspace))
-						.map(e -> (MCItem) e).filter(MCItem::hasNoSubtypes).toList());
-		return elements;
-	}
-
-	/**
-	 * Loads all mod elements and all Minecraft blocks without elements
-	 * that are wildcard elements to subtypes (wood -&gt; oak wood, birch wood, ...)
-	 * so only oak wood, birch wood, ... are loaded, without wildcard wood element
-	 *
-	 * @return All Blocks from both Minecraft and custom elements with or without metadata
-	 */
-	public static List<MCItem> loadBlocks(Workspace workspace) {
-		List<MCItem> elements = new ArrayList<>();
-		workspace.getModElements().forEach(modElement -> elements.addAll(
-				modElement.getMCItems().stream().filter(e -> e.getType().equals("block")).toList()));
-		elements.addAll(
-				DataListLoader.loadDataList("blocksitems").stream().filter(e -> e.isSupportedInWorkspace(workspace))
-						.filter(typeMatches("block")).map(e -> (MCItem) e).filter(MCItem::hasNoSubtypes).toList());
-		return elements;
-	}
-
-	/**
-	 * Loads all mod elements and all Minecraft blocks, including elements
-	 * that are wildcard elements to subtypes (wood -&gt; oak wood, birch wood, ...)
-	 *
-	 * @return All Blocks from both Minecraft and custom elements with or without metadata
-	 */
-	public static List<MCItem> loadBlocksAndTags(Workspace workspace) {
-		List<MCItem> elements = new ArrayList<>();
-		workspace.getModElements().forEach(modElement -> elements.addAll(
-				modElement.getMCItems().stream().filter(e -> e.getType().equals("block")).toList()));
-		elements.addAll(
-				DataListLoader.loadDataList("blocksitems").stream().filter(e -> e.isSupportedInWorkspace(workspace))
-						.filter(typeMatches("block")).map(e -> (MCItem) e).toList());
 		return elements;
 	}
 
@@ -285,7 +286,7 @@ public class ElementUtil {
 	public static List<DataListEntry> getAllBooleanGameRules(Workspace workspace) {
 		List<DataListEntry> retval = getCustomElements(workspace, modelement -> {
 			if (modelement.getType() == ModElementType.GAMERULE)
-				return modelement.getMetadata("type").equals(VariableTypeLoader.BuiltInTypes.LOGIC.getName());
+				return VariableTypeLoader.BuiltInTypes.LOGIC.getName().equals(modelement.getMetadata("type"));
 			return false;
 		});
 
@@ -297,7 +298,7 @@ public class ElementUtil {
 	public static List<DataListEntry> getAllNumberGameRules(Workspace workspace) {
 		List<DataListEntry> retval = getCustomElements(workspace, modelement -> {
 			if (modelement.getType() == ModElementType.GAMERULE)
-				return modelement.getMetadata("type").equals(VariableTypeLoader.BuiltInTypes.NUMBER.getName());
+				return VariableTypeLoader.BuiltInTypes.NUMBER.getName().equals(modelement.getMetadata("type"));
 			return false;
 		});
 
